test_apps/test-typechecker/fail/ac/principalwrongcred.app
application test

section principal

entity User{
name :: String
}

principal is User with credentials nam